<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="onClickButton"
        android:text="@string/implicit_intents" />

    <Button
        android:id="@+id/btnTwo"
        android:onClick="onClickButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emi_calculator" />

    <Button
        android:id="@+id/btnThree"
        android:onClick="onClickButton"
        android:text="@string/user_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>